BUG#21354: (COUNT(*) = 1) not working in SELECT inside prepared            statement.

The problem was that during statement re-execution if the result was
empty the old result could be returned for group functions.

The solution is to implement proper cleanup() method in group
functions.